--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodemon server.js --ignore client",
     "client-install": "npm install --prefix client/client_app",
     "client": "npm start --prefix client/client_app",
     "dev": "concurrently \"npm run server\" \"npm run client\""
